--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "leaflet": "^1.9.3",
     "react": "^17.0.2",
+    "react-axios": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^1.0.1"
