--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules/
 /.pnp
@@ -25,3 +23,5 @@ yarn-debug.log*
 yarn-error.log*
 
 .env
+package-lock.json
+yarn.lock
