fixing merge conflicts

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /.pnp
 .pnp.js
 
+/.vscode/
+
 # testing
 /coverage
 
@@ -23,3 +25,5 @@ yarn-debug.log*
 yarn-error.log*
 
 .env
+package-lock.json
+yarn.lock
