--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^1.3.4",
-    "axios": "^1.3.4",
+    "country-state-city": "^3.1.2",
     "leaflet": "^1.9.3",
     "react": "^17.0.2",
     "react-datepicker": "^4.10.0",
-    "react-datepicker": "^4.10.0",
     "react-dom": "^17.0.2",
-    "react-select": "^5.7.0",
-    "react-scripts": "^5.0.1",
     "react-scripts": "4.0.3",
     "react-select": "^5.7.0",
     "web-vitals": "^1.0.1"
